--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -47,11 +47,24 @@
                             <label class="text-danger">{{.}}</label>
                         {{end}}
                         <input class="form-control {{with .Form.Errors.Get "phone"}} is-invalid {{end}}" id="phone"
-                               autocomplete="off" type='email'
+                               autocomplete="off" type='phone'
                                name='phone' value="{{$res.Phone}}" required>
                     </div>
 
-                    <hr>
+                    <div class="form-group">
+                      <label for="start_date">Start Date</label>
+                      <input type="text" id="start_date" 
+                             name="start_date" class="form-control">
+                    </div>
+
+                    <div class="form-group">
+                      <label for="end_date">End Date</label>
+                      <input type="text" id="end_date" 
+                             name="end_date"  class="form-control">
+                    </div>
+
+                    <input type="hidden" id="room_id" name="room_id" value="6">
+
                     <input type="submit" class="btn btn-primary" value="Make Reservation">
                 </form>
 
