--- a/templates/generals.page.tmpl
+++ b/templates/generals.page.tmpl
@@ -100,10 +100,26 @@
                 })
                     .then(response => response.json())
                     .then(data => {
-                        console.log(data);
-                        console.log(data.ok);
-                        console.log(data.message);
-                    })
+                        if (data.ok) {
+                              attention.custom({
+                                  icon: 'success',
+                                  showConfirmButton: false,
+                                  msg: '<p>Room is available!</p>'
+                                      + '<p><a href="/book-room?id='
+                                      + data.room_id
+                                      + '&s='
+                                      + data.start_date
+                                      + '&e='
+                                      + data.end_date
+                                      + '" class="btn btn-primary">'
+                                      + 'Book now!</a></p>',
+                              })
+                          } else {
+                              attention.error({
+                                  msg: "No availability",
+                              })
+                          }
+                      })
             }
         });
     })
