--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -75,6 +75,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/login">Contact</a>
+                </li>
 
             </ul>
         </div>
